--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,13 +3,13 @@
   "name": "Time Tracking Dashboard",
   "icons": [
     {
-      "src": "favicon-32x32.png",
+      "src": "icon-self-care.svg",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "svg/x-icon"
     }
   ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#000000"
 }
